# mofsbufixer

./: .gitignore  README.md  pyproject.toml
mofsbufixer/data/: __init__.py  inchi_to_name_and_smile.json
mofsbufixer/input_output/: ._filetyper.py  ._xyz_to_inp.py  coords_library.py  filetyper.py  read_zip.py  xyz_to_inp.py
mofsbufixer/script/: compile_ligand.py  compile_sbu.py
mofsbufixer/sym/: symmetrize.py
tests/: Failed.txt  combine_json.py  mofstructure_error.txt  mofstructure_error_connected_component.txt  sbu_compiler.py  test_functions.py  test_metal_sbu.py  test_organic_sbu.py
tests/.history/: test_metal_sbu_20241002135806.py  test_metal_sbu_20241002135808.py  test_metal_sbu_20241002135819.py  test_metal_sbu_20241002135822.py  test_metal_sbu_20241002135825.py  test_metal_sbu_20241002135832.py  test_metal_sbu_20241002135835.py  test_metal_sbu_20241002135838.py  test_metal_sbu_20241002135843.py  test_metal_sbu_20241002135845.py  test_metal_sbu_20241002135846.py  test_metal_sbu_20241002135850.py  test_metal_sbu_20241002135853.py  test_metal_sbu_20241002135900.py  test_metal_sbu_20241002135902.py  test_metal_sbu_20241002135906.py  test_metal_sbu_20241002135910.py  test_metal_sbu_20241002135924.py  test_metal_sbu_20241002135926.py  test_metal_sbu_20241002135928.py  test_metal_sbu_20241002135930.py  test_metal_sbu_20241002135934.py  test_metal_sbu_20241002135938.py  test_metal_sbu_20241002135940.py  test_metal_sbu_20241002135942.py  test_metal_sbu_20241002135945.py  test_metal_sbu_20241002135949.py  test_metal_sbu_20241002135957.py  (+100 more)
(+5 files in other folders)
