[tool.poetry]
name = "mofsbufixer"
version = "0.1.0"
description = ""
authors = ["Dinga Wonanke <bafgreat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.13"
ase = "^3.23.0"
pytest = "^8.3.3"
mofstructure = "^0.1.8.1"
requests = "^2.32.3"
rdkit-pypi = "^2022.9.5"
rdkit = "^2024.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
